# grpc-c

./: builddeps.sh
examples/foo.3/: client2.c  cscope.files  cscope.out  cscope.out.in  cscope.out.po  foo.grpc-c.c  foo.grpc-c.h  foo.proto  info.grpc-c.h  readme  server2.c
examples/foo.4/: client2.c  foo.grpc-c.c  foo.grpc-c.h  foo.grpc-c.service.c  foo.proto  info.grpc-c.c  info.grpc-c.service.c  info.proto  readme  server2.c
examples/foo.4/google/protobuf/: empty.grpc-c.c  empty.grpc-c.h  empty.grpc-c.service.c
examples/foo.luo/: CMakeLists.txt  client.c  client2.c  foo.grpc-c.c  foo.grpc-c.h  foo.grpc-c.service.c  foo.proto  main.c  readme  server.c  server2.c
lib/: stream_ops.c
xxx/: buildcmp.sh  builddeps.sh  buildlib.sh
